Thu Mar 18 00:33:56 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/Sheep.cpp:
	* src/Sheep.h:
	  - Improved upon the Sheep class, I think. It handles its own
	    image cache now, and the image changes when the direction is
	    changed.

Thu Mar 18 00:04:44 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/IsoMapObjectFactory.cpp:
	* src/Makefile.am:
	* src/Sheep.cpp:
	* src/Sheep.h:
	  - Added a Sheep class.

Wed Mar 17 22:27:58 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/IsoMapData.cpp:
	* src/IsoMapData.h:
	* src/MapData.cpp:
	* src/MapData.h:
	  - Moved the implementation of MapData::getNeighbor() to
	    IsoMapData. Made MapData::getNeighbor() pure virtual.

Wed Mar 17 22:14:10 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/IsoMapTile.cpp:
	* src/IsoMapObject.cpp:
	* src/main.cpp:
	  - Fixed map rendering up a bit.
	  - Added another sheep!

Wed Mar 17 22:03:35 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/MapData.cpp:
	* src/MapData.h:
	  - Added MapData::getNeighbor().

Wed Mar 17 21:56:23 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/MapLocation.cpp:
	* src/MapLocation.h:
	  - Added MapLocation::isEvenRow() and isOddRow().

Wed Feb 04 21:50:41 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/Fadey.cpp:
	  - Exit if we can't find the images, instead of segfaulting.

Mon Feb 02 17:33:41 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - Increase the fade time to 3 seconds.

Sat Aug 16 23:55:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/MapObject.cpp:
	* src/MapObject.h:
	  - MapObjects are now notified when their direction changes.
	    Sheep will implement this later.

Sat Aug 16 23:19:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/MapObject.cpp:
	* src/MapObject.h:
	  - Added a function for setting the direction of an object.

Sat Aug 16 20:24:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/Direction.h: